--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 	</div>
 </div>
 
-<div class="about-section">
+<div id="about" class="about-section">
 	<div class="row">
 		<h1 class="section-title">
 			<span class="en">About</span>
@@ -68,7 +68,7 @@ layout: default
 	</div>
 </div>
 
-<div class="news-section">
+<div id="news" class="news-section">
 	<h1 class="section-title">
 		<span class="en">News</span>
 		<span class="ja">お知らせ</span>
@@ -92,7 +92,7 @@ layout: default
 	</div>
 </div>
 
-<div class="access-section">
+<div id="access" class="access-section">
 	<h1 class="section-title">
 		<span class="en">Access</span>
 		<span class="ja">会場アクセス</span>
@@ -114,7 +114,7 @@ layout: default
 	</div>
 </div>
 
-<div class="speaker-section">
+<div id="speakers" class="speaker-section">
 	<h1 class="section-title">
 		<span class="en">Speakers</span>
 		<span class="ja">スピーカー</span>
@@ -171,7 +171,7 @@ layout: default
 	</ul>
 </div>
 
-<div class="sponsor-section">
+<div id="sponsors" class="sponsor-section">
 	<h1 class="section-title">
 		<span class="en">Sponsors</span>
 		<span class="ja">スポンサー一覧</span>
@@ -213,7 +213,7 @@ layout: default
 	<a href="{{ site.sponsorurl }}" class="button button-large button-block become-a-sponsor">スポンサー申し込み</a>
 </div>
 
-<div class="timetable-section">
+<div id="timetable" class="timetable-section">
 	<h1 class="section-title">
 		<span class="en">Time Table</span>
 		<span class="ja">タイムテーブル</span>
@@ -347,7 +347,7 @@ layout: default
 	</div>
 </div>
 
-<div class="contact-section">
+<div id="contact" class="contact-section">
 	<h1 class="section-title">
 		<span class="en">Contact</span>
 		<span class="ja">お問い合わせ</span>
