--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ layout: default
 	<a href="" class="button button-large button-blue button-block open-form">フォームを開く</a>
 </div>
 
-<div class="staff-section">
+<div id="staff" class="staff-section">
 	<h1 class="section-title">
 		<span class="en">Staff</span>
 		<span class="ja">スタッフ</span>
