Add blockly divider

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@ layout: default
 <div id="about" class="about-section">
 	<div class="row">
 		<h1 class="section-title">
-			<span class="en">About</span>
-			<span class="ja">DojoCon とは？</span>
+			<span class="section-title-inner">
+				<span class="en">About</span>
+				<span class="ja">DojoCon とは？</span>
+			</span>
 		</h1>
 		<div class="what-is-coderdojo">
 			<h2>CoderDojo って？</h2>
@@ -70,8 +72,10 @@ layout: default
 
 <div id="news" class="news-section">
 	<h1 class="section-title">
-		<span class="en">News</span>
-		<span class="ja">お知らせ</span>
+		<span class="section-title-inner">
+			<span class="en">News</span>
+			<span class="ja">お知らせ</span>
+		</span>
 	</h1>
 	<div class="posts-outer">
 		<ul class="posts">
@@ -94,8 +98,10 @@ layout: default
 
 <div id="access" class="access-section">
 	<h1 class="section-title">
-		<span class="en">Access</span>
-		<span class="ja">会場アクセス</span>
+		<span class="section-title-inner">
+			<span class="en">Access</span>
+			<span class="ja">会場アクセス</span>
+		</span>
 	</h1>
 	<h2>場所</h2>
 	<p><a href="{{ site.venueurl }}" target="_blank">内田洋行 大阪 ユビキタス協創広場 CANVAS</a></p>
@@ -116,8 +122,10 @@ layout: default
 
 <div id="speakers" class="speaker-section">
 	<h1 class="section-title">
-		<span class="en">Speakers</span>
-		<span class="ja">スピーカー</span>
+		<span class="section-title-inner">
+			<span class="en">Speakers</span>
+			<span class="ja">スピーカー</span>
+		</span>
 	</h1>
 	<ul class="speakers">
 		<li>
@@ -173,8 +181,10 @@ layout: default
 
 <div id="sponsors" class="sponsor-section">
 	<h1 class="section-title">
-		<span class="en">Sponsors</span>
-		<span class="ja">スポンサー一覧</span>
+		<span class="section-title-inner">
+			<span class="en">Sponsors</span>
+			<span class="ja">スポンサー一覧</span>
+		</span>
 	</h1>
 	<div class="gold-sponsors">
 		<h2>Gold Sponsors</h2>
@@ -215,8 +225,10 @@ layout: default
 
 <div id="timetable" class="timetable-section">
 	<h1 class="section-title">
-		<span class="en">Time Table</span>
-		<span class="ja">タイムテーブル</span>
+		<span class="section-title-inner">
+			<span class="en">Time Table</span>
+			<span class="ja">タイムテーブル</span>
+		</span>
 	</h1>
 	<div class="timetable">
 		<div class="session-block">
@@ -349,16 +361,20 @@ layout: default
 
 <div id="contact" class="contact-section">
 	<h1 class="section-title">
-		<span class="en">Contact</span>
-		<span class="ja">お問い合わせ</span>
+		<span class="section-title-inner">
+			<span class="en">Contact</span>
+			<span class="ja">お問い合わせ</span>
+		</span>
 	</h1>
 	<a href="" class="button button-large button-blue button-block open-form">フォームを開く</a>
 </div>
 
 <div id="staff" class="staff-section">
 	<h1 class="section-title">
-		<span class="en">Staff</span>
-		<span class="ja">スタッフ</span>
+		<span class="section-title-inner">
+			<span class="en">Staff</span>
+			<span class="ja">スタッフ</span>
+		</span>
 	</h1>
 	<ul class="members">
 		<li>
@@ -446,8 +462,10 @@ layout: default
 
 <div class="sns-section">
 	<h1 class="section-title">
-		<span class="en">SNS</span>
-		<span class="copy">Check it out!</span>
+		<span class="section-title-inner">
+			<span class="en">SNS</span>
+			<span class="copy">Check it out!</span>
+		</span>
 	</h1>
 	<ul class="fb-tw-widgets">
 		<li class="fb-page-plugin">
