Add CoderDojo logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 			<h2>CoderDojo って？</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus architecto voluptas pariatur, odit quae, deleniti totam.<br />
 				Dignissimos tenetur magnam culpa ad maiores, veniam possimus. Debitis animi modi quasi consequatur.</p>
-			<p class="coderdojo-logo"><img src="//placehold.it/360x100/000/fff701.png?text=CoderDojo" alt="CoderDojo のロゴ"></p>
+			<p class="coderdojo-logo"><img src="{{ '/assets/images/coderdojo-logo.svg' | prepend: site.baseurl }}" alt="CoderDojo ロゴ"></p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et tempora quae maiores porro sed illo nobis pariatur eveniet necessitatibus dolorum. Excepturi illum quasi, voluptates odio! Fugit, laudantium ut magni hic!</p>
 		</div>
 	</div>
