Add timetable-section tablet style

--- a/index.html
+++ b/index.html
@@ -248,47 +248,47 @@ layout: default
 				<ol class="sessions">
 					<li class="bg-light duration-10min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 					</li>
 					<li class="bg-dark duration-40min break-5min">
 						<h3 class="session-title"><a href="">基調講演<span class="speaker"> / 阿部和広</span></a></h3>
-						<p class="time"><small>[10:10-10:50]</small></p>
+						<p class="time">[10:10-10:50]</p>
 					</li>
 					<li class="bg-light duration-40min break-5min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:55-11:35]</small></p>
+						<p class="time">[10:55-11:35]</p>
 					</li>
 					<li class="bg-dark duration-40min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:55-11:35]</small></p>
+						<p class="time">[10:55-11:35]</p>
 					</li>
 					<li class="duration-40min">
 						<h3 class="session-title"><a href="">お昼休憩</a></h3>
-						<p class="time"><small>[12:20-13:00]</small></p>
+						<p class="time">[12:20-13:00]</p>
 					</li>
 					<li class="bg-light duration-25min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 					</li>
 					<li class="bg-dark duration-15min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 					</li>
 					<li class="bg-light duration-15min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 					</li>
 					<li class="bg-dark duration-25min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 					</li>
 					<li class="bg-light duration-30min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 					</li>
 					<li class="bg-dark duration-15min">
 						<h3 class="session-title"><a href="">スポンサー</a></h3>
-						<p class="time"><small>[14:50-15:05]</small></p>
+						<p class="time">[14:50-15:05]</p>
 					</li>
 				</ol>
 			</div>
@@ -308,22 +308,22 @@ layout: default
 				<ol class="workshops">
 					<li class="bg-light duration-90min break-5min">
 						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 						<p><a href="" class="button button-small button-blue">Entry</a></p>
 					</li>
 					<li class="bg-dark duration-90min break-5min">
 						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 						<p><a href="" class="button button-small button-blue">Entry</a></p>
 					</li>
 					<li class="bg-light duration-90min break-5min">
 						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 						<p><a href="" class="button button-small button-blue">Entry</a></p>
 					</li>
 					<li class="bg-dark duration-90min">
 						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+						<p class="time">[10:00-10:10]</p>
 						<p><a href="" class="button button-small button-blue">Entry</a></p>
 					</li>
 				</ol>
