--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@ layout: default
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et tempora quae maiores porro sed illo nobis pariatur eveniet necessitatibus dolorum. Excepturi illum quasi, voluptates odio! Fugit, laudantium ut magni hic!</p>
 		</div>
 	</div>
-	<div class="row">
-		<div class="what-is-dojocon">
-			<figure><img src="//placehold.it/600x260.png" alt="DojoCon のイメージ写真"></figure>
-			<div class="text">
-				<h2>DojoCon とは？</h2>
-				<p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem debitis provident rerum pariatur.</strong><br />
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est asperiores quidem officiis, harum nisi aperiam modi ut dolor doloribus fugiat, labore velit beatae rem laudantium praesentium deleniti sunt, voluptates eius.<br />
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum beatae dolores, sequi neque commodi officiis tempora eius dignissimos atque quisquam! Adipisci exercitationem, tenetur aut distinctio quis qui reiciendis impedit quibusdam.</p>
+	<div class="what-is-dojocon-outer">
+		<div class="container">
+			<div class="what-is-dojocon">
+				<figure><img src="//placehold.it/600x260.png" alt="DojoCon のイメージ写真"></figure>
+				<div class="text">
+					<h2>DojoCon とは？</h2>
+					<p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem debitis provident rerum pariatur.</strong><br />
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est asperiores quidem officiis, harum nisi aperiam modi ut dolor doloribus fugiat, labore velit beatae rem laudantium praesentium deleniti sunt, voluptates eius.<br />
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum beatae dolores, sequi neque commodi officiis tempora eius dignissimos atque quisquam! Adipisci exercitationem, tenetur aut distinctio quis qui reiciendis impedit quibusdam.</p>
+				</div>
 			</div>
-		</div>
-	</div>
-	<div class="container first-dojocon-japan-outer">
-		<div class="first-dojocon-japan">
-			<h2>初開催の DojoCon Japan</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consequuntur, suscipit distinctio voluptas rerum eum.</p>
-			<ul>
-				<li><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong></li>
-				<li><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cumque dicta minima necessitatibus doloribus.</strong></li>
-				<li><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong></li>
-			</ul>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus rem distinctio ducimus nobis, adipisci quos recusandae, facilis neque voluptates hic natus autem eos dicta, expedita ea reprehenderit quae esse iusto.</p>
+			<div class="first-dojocon-japan">
+				<h2>初開催の DojoCon Japan</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consequuntur, suscipit distinctio voluptas rerum eum.</p>
+				<ul>
+					<li><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong></li>
+					<li><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cumque dicta minima necessitatibus doloribus.</strong></li>
+					<li><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong></li>
+				</ul>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus rem distinctio ducimus nobis, adipisci quos recusandae, facilis neque voluptates hic natus autem eos dicta, expedita ea reprehenderit quae esse iusto.</p>
+			</div>
 		</div>
 	</div>
 	<div class="row">
@@ -136,7 +136,7 @@ layout: default
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="" class="button button-small button-black">More</a>
+			<p><a href="" class="button button-small button-black">More</a></p>
 		</li>
 		<li>
 			<figure class="speaker-avator">
@@ -144,7 +144,7 @@ layout: default
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="" class="button button-small button-black">More</a>
+			<p><a href="" class="button button-small button-black">More</a></p>
 		</li>
 		<li>
 			<figure class="speaker-avator">
@@ -152,7 +152,7 @@ layout: default
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="" class="button button-small button-black">More</a>
+			<p><a href="" class="button button-small button-black">More</a></p>
 		</li>
 		<li>
 			<figure class="speaker-avator">
@@ -160,7 +160,7 @@ layout: default
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="" class="button button-small button-black">More</a>
+			<p><a href="" class="button button-small button-black">More</a></p>
 		</li>
 		<li>
 			<figure class="speaker-avator">
@@ -168,7 +168,7 @@ layout: default
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="" class="button button-small button-black">More</a>
+			<p><a href="" class="button button-small button-black">More</a></p>
 		</li>
 		<li>
 			<figure class="speaker-avator">
@@ -176,7 +176,7 @@ layout: default
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="" class="button button-small button-black">More</a>
+			<p><a href="" class="button button-small button-black">More</a></p>
 		</li>
 	</ul>
 </div>
