--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et tempora quae maiores porro sed illo nobis pariatur eveniet necessitatibus dolorum. Excepturi illum quasi, voluptates odio! Fugit, laudantium ut magni hic!</p>
 		</div>
 	</div>
-	<div class="what-is-dojocon-outer">
+	<div class="about-section-inner">
 		<div class="container">
 			<div class="what-is-dojocon">
 				<figure><img src="//placehold.it/600x260.png" alt="DojoCon のイメージ写真"></figure>
