Add main images

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ layout: default
 
 <div class="hero">
 	<div class="hero-main">
-		<h1 class="logo"><img src="//placehold.it/400x310/fff701/0a94b8.png?text=DojoCon+JAPAN+2016" alt="DojoCon JAPAN 2016"></h1>
-		<div class="line-taiji"><img src="//placehold.it/425x425/fff701/fff.png?text=Line+Taiji" alt="CoderDojo ロゴモチーフアイコン"></div>
-		<h2 class="subtitle"><img src="//placehold.it/400x100/fff701/0a94b8.png?text=THE+MORE+DOJOS,+THE+MORE+COOL+CORDERS." alt="THE MORE DOJOS, THE MORE COOL CORDERS."></h2>
+		<h1 class="logo"><img src="{{ '/assets/images/dojocon-japan-logo.svg' | prepend: site.baseurl }}" alt="DojoCon JAPAN 2016"></h1>
+		<div class="line-taiji"><img src="{{ '/assets/images/line-taiji.svg' | prepend: site.baseurl }}" alt="DojoCon Japan 2016 アイコン"></div>
+		<h2 class="subtitle"><img src="{{ '/assets/images/subtitle.svg' | prepend: site.baseurl }}" alt="THE MORE DOJOS, THE MORE COOL CORDERS."></h2>
 		{% include action.html %}
 	</div>
 	<div class="date-venue">
