Add hero unit tablet style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="hero">
 	<div class="hero-main">
 		<h1 class="logo"><img src="{{ '/assets/images/dojocon-japan-logo.svg' | prepend: site.baseurl }}" alt="DojoCon JAPAN 2016"></h1>
-		<div class="line-taiji"><img src="{{ '/assets/images/line-taiji.svg' | prepend: site.baseurl }}" alt="DojoCon Japan 2016 アイコン"></div>
+		<div class="line-taiji"><img src="{{ '/assets/images/line-taiji.png' | prepend: site.baseurl }}" alt="DojoCon Japan 2016 アイコン"></div>
 		<h2 class="subtitle"><img src="{{ '/assets/images/dojocon-japan-subtitle.svg' | prepend: site.baseurl }}" alt="THE MORE DOJOS, THE MORE COOL CORDERS."></h2>
 		{% include action.html %}
 	</div>
