Add venue images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
 	<div class="about-section-inner">
 		<div class="container">
 			<div class="what-is-dojocon">
-				<figure><img src="//placehold.it/600x260.png" alt="DojoCon のイメージ写真"></figure>
+				<figure><img src="{{ '/assets/images/what-is-dojocon-image.jpg' }}" alt="DojoCon のイメージ写真"></figure>
 				<div class="text">
 					<h2>DojoCon とは？</h2>
 					<p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem debitis provident rerum pariatur.</strong><br />
