Add global menu scroll event

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 		<h1 class="logo"><img src="{{ '/assets/images/dojocon-japan-logo.svg' | prepend: site.baseurl }}" alt="DojoCon JAPAN 2016"></h1>
 		<div class="line-taiji"><img src="{{ '/assets/images/line-taiji.png' | prepend: site.baseurl }}" alt="DojoCon Japan 2016 アイコン"></div>
 		<h2 class="subtitle"><img src="{{ '/assets/images/dojocon-japan-subtitle.svg' | prepend: site.baseurl }}" alt="THE MORE DOJOS, THE MORE COOL CORDERS."></h2>
-		<ul class="action"><!--
+		<ul class="action js-hero-action"><!--
 			--><li class="share"><a href="https://www.facebook.com/sharer.php?u={{ '/' | prepend: site.url }}" class="icon-facebook-circle" target="_blank"></a></li><!--
 			--><li class="share"><a href="https://twitter.com/share?
 				url={{ '/' | prepend: site.url }}&
