Add arduino-robot images

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@ layout: default
 		</div>
 	</div>
 	<div class="arduino-robot">
-		<figure><img src="//placehold.it/640x460.png" alt="アルドゥイーノロボット"></figure>
+		<div class="hand"><img src="{{ '/assets/images/hand.png' | prepend: site.baseurl }}" alt="手"></div>
+		<div class="pipi"><img src="{{ '/assets/images/pipi.svg' | prepend: site.baseurl }}" alt="pipi!"></div>
+		<div class="robot"><img src="{{ '/assets/images/robot.png' | prepend: site.baseurl }}" alt="ロボット"></div>
 	</div>
 </div>
 
