Add sponsors rotated background

--- a/index.html
+++ b/index.html
@@ -196,47 +196,49 @@ layout: default
 </div>
 
 <div id="sponsors" class="sponsor-section">
-	<h1 class="section-title">
-		<span class="section-title-inner">
-			<span class="en">Sponsors</span>
-			<span class="ja">スポンサー一覧</span>
-		</span>
-	</h1>
-	<div class="gold-sponsors">
-		<h2>Gold Sponsors</h2>
-		<ul class="sponsors">
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-		</ul>
+	<div class="sponsor-section-inner">
+		<h1 class="section-title">
+			<span class="section-title-inner">
+				<span class="en">Sponsors</span>
+				<span class="ja">スポンサー一覧</span>
+			</span>
+		</h1>
+		<div class="gold-sponsors">
+			<h2>Gold Sponsors</h2>
+			<ul class="sponsors">
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+			</ul>
+		</div>
+		<div class="silver-sponsors">
+			<h2>Silver Sponsors</h2>
+			<ul class="sponsors">
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+			</ul>
+		</div>
+		<div class="bronze-sponsors">
+			<h2>Bronze Sponsors</h2>
+			<ul class="sponsors">
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+			</ul>
+		</div>
+		<a href="{{ site.sponsorurl }}" class="button button-large button-block become-a-sponsor">スポンサー申し込み</a>
 	</div>
-	<div class="silver-sponsors">
-		<h2>Silver Sponsors</h2>
-		<ul class="sponsors">
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-		</ul>
-	</div>
-	<div class="bronze-sponsors">
-		<h2>Bronze Sponsors</h2>
-		<ul class="sponsors">
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-		</ul>
-	</div>
-	<a href="{{ site.sponsorurl }}" class="button button-large button-block become-a-sponsor">スポンサー申し込み</a>
 </div>
 
 <div id="timetable" class="timetable-section">
