--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ layout: default
 		※お車でのご来館はご遠慮ください</p>
 	<div class="map-outer">
 		<h2>Map</h2>
-		<p class="map"></p>
+		<div id="map" class="map"></div>
 	</div>
 </div>
 
