Add photo gallery

--- a/index.html
+++ b/index.html
@@ -501,10 +501,36 @@ layout: default
 		</li>
 	</ul>
 
-	<div class="instagram-widget">
+	<div class="photo-gallery">
+		<ul class="photos">
+			<li><a href="//placehold.it/1500x1000"
+				style="background-image: url(//placehold.it/1500x1000);"></a></li>
+			<li><a href="//placehold.it/1000x1500"
+				style="background-image: url(//placehold.it/1000x1500);"></a></li>
+			<li><a href="//placehold.it/1500x1000"
+				style="background-image: url(//placehold.it/1500x1000);"></a></li>
+			<li><a href="//placehold.it/1000x1500"
+				style="background-image: url(//placehold.it/1000x1500);"></a></li>
+			<li><a href="//placehold.it/1500x1000"
+				style="background-image: url(//placehold.it/1500x1000);"></a></li>
+			<li><a href="//placehold.it/1000x1500"
+				style="background-image: url(//placehold.it/1000x1500);"></a></li>
+			<li><a href="//placehold.it/1500x1000"
+				style="background-image: url(//placehold.it/1500x1000);"></a></li>
+			<li><a href="//placehold.it/1000x1500"
+				style="background-image: url(//placehold.it/1000x1500);"></a></li>
+			<li><a href="//placehold.it/1500x1000"
+				style="background-image: url(//placehold.it/1500x1000);"></a></li>
+			<li><a href="//placehold.it/1000x1500"
+				style="background-image: url(//placehold.it/1000x1500);"></a></li>
+			<li><a href="//placehold.it/1500x1000"
+				style="background-image: url(//placehold.it/1500x1000);"></a></li>
+			<li><a href="//placehold.it/1000x1500"
+				style="background-image: url(//placehold.it/1000x1500);"></a></li>
+		</ul>
 	</div>
 
-	<p class="sns-id">@DojoConJapan</p>
+	<!-- <p class="sns-id">@DojoConJapan</p> -->
 
 	<ul class="sns-links icon-share">
 		<li><a href="https://www.facebook.com/sharer.php?u={{ '/' | prepend: site.url }}" class="icon-facebook-circle" target="_blank"></a></li>
