Fancybox photo gallery

--- a/index.html
+++ b/index.html
@@ -502,30 +502,30 @@ layout: default
 	</ul>
 
 	<div class="photo-gallery">
-		<ul class="photos">
-			<li><a href="//placehold.it/1500x1000"
+		<ul class="photos js-photos">
+			<li><a href="//placehold.it/1500x1000.png"
 				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500"
+			<li><a href="//placehold.it/1000x1500.png"
 				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000"
+			<li><a href="//placehold.it/1500x1000.png"
 				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500"
+			<li><a href="//placehold.it/1000x1500.png"
 				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000"
+			<li><a href="//placehold.it/1500x1000.png"
 				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500"
+			<li><a href="//placehold.it/1000x1500.png"
 				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000"
+			<li><a href="//placehold.it/1500x1000.png"
 				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500"
+			<li><a href="//placehold.it/1000x1500.png"
 				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000"
+			<li><a href="//placehold.it/1500x1000.png"
 				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500"
+			<li><a href="//placehold.it/1000x1500.png"
 				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000"
+			<li><a href="//placehold.it/1500x1000.png"
 				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500"
+			<li><a href="//placehold.it/1000x1500.png"
 				style="background-image: url(//placehold.it/1000x1500);"></a></li>
 		</ul>
 	</div>
