Fancybox speaker profile

--- a/index.html
+++ b/index.html
@@ -143,56 +143,7 @@ layout: default
 			<span class="ja">スピーカー</span>
 		</span>
 	</h1>
-	<ul class="speakers">
-		<li>
-			<figure class="speaker-avator">
-				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
-			</figure>
-			<h2 class="speaker-name">岡田 裕行</h2>
-			<p class="speaker-description">BlocklyDuino</p>
-			<p><a href="" class="button button-small button-black">More</a></p>
-		</li>
-		<li>
-			<figure class="speaker-avator">
-				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
-			</figure>
-			<h2 class="speaker-name">岡田 裕行</h2>
-			<p class="speaker-description">BlocklyDuino</p>
-			<p><a href="" class="button button-small button-black">More</a></p>
-		</li>
-		<li>
-			<figure class="speaker-avator">
-				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
-			</figure>
-			<h2 class="speaker-name">岡田 裕行</h2>
-			<p class="speaker-description">BlocklyDuino</p>
-			<p><a href="" class="button button-small button-black">More</a></p>
-		</li>
-		<li>
-			<figure class="speaker-avator">
-				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
-			</figure>
-			<h2 class="speaker-name">岡田 裕行</h2>
-			<p class="speaker-description">BlocklyDuino</p>
-			<p><a href="" class="button button-small button-black">More</a></p>
-		</li>
-		<li>
-			<figure class="speaker-avator">
-				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
-			</figure>
-			<h2 class="speaker-name">岡田 裕行</h2>
-			<p class="speaker-description">BlocklyDuino</p>
-			<p><a href="" class="button button-small button-black">More</a></p>
-		</li>
-		<li>
-			<figure class="speaker-avator">
-				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
-			</figure>
-			<h2 class="speaker-name">岡田 裕行</h2>
-			<p class="speaker-description">BlocklyDuino</p>
-			<p><a href="" class="button button-small button-black">More</a></p>
-		</li>
-	</ul>
+	{% include speakers.html %}
 </div>
 
 <div id="sponsors" class="sponsor-section">
