--- a/index.html
+++ b/index.html
@@ -157,35 +157,35 @@ layout: default
 		<div class="gold-sponsors">
 			<h2>Gold Sponsors</h2>
 			<ul class="sponsors">
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 			</ul>
 		</div>
 		<div class="silver-sponsors">
 			<h2>Silver Sponsors</h2>
 			<ul class="sponsors">
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 			</ul>
 		</div>
 		<div class="bronze-sponsors">
 			<h2>Bronze Sponsors</h2>
 			<ul class="sponsors">
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
-				<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
+				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 			</ul>
 		</div>
 		<a href="{{ site.sponsorurl }}" class="button button-large button-block become-a-sponsor">スポンサー申し込み</a>
