--- a/index.html
+++ b/index.html
@@ -214,15 +214,15 @@ layout: default
 				<h2>Session Line</h2>
 				<ol class="sessions">
 					<li class="bg-light duration-10min">
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
+						<h3 class="session-title"><a href="#opening-ceremony" class="js-session-detail-trigger">オープニングセレモニー</a></h3>
 						<p class="time">[10:00-10:10]</p>
 					</li>
 					<li class="bg-dark duration-40min break-5min">
-						<h3 class="session-title"><a href="">基調講演<span class="speaker"> / 阿部和広</span></a></h3>
+						<h3 class="session-title"><a href="#keynote" class="js-session-detail-trigger">基調講演<span class="speaker"> / 阿部和広</span></a></h3>
 						<p class="time">[10:10-10:50]</p>
 					</li>
 					<li class="bg-light duration-40min break-5min">
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
+						<h3 class="session-title"><a href="#blocklyduino" class="js-session-detail-trigger">子供でもArduinoを操作できるBlocklyDuinoの紹介</a></h3>
 						<p class="time">[10:55-11:35]</p>
 					</li>
 					<li class="bg-dark duration-40min">
@@ -326,6 +326,7 @@ layout: default
 			</li>
 		</ul>
 	</div>
+	{% include sessions.html %}
 </div>
 
 <div id="contact" class="contact-section">
