Add animation for the arduino robot

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ layout: default
 	</div>
 	<div class="arduino-robot">
 		<div class="hand"><img src="{{ '/assets/images/hand.png' | prepend: site.baseurl }}" alt="手"></div>
-		<div class="pipi"><img src="{{ '/assets/images/pipi.svg' | prepend: site.baseurl }}" alt="pipi!"></div>
-		<div class="robot"><img src="{{ '/assets/images/robot.png' | prepend: site.baseurl }}" alt="ロボット"></div>
+		<div class="pipi js-pipi"><img src="{{ '/assets/images/pipi.svg' | prepend: site.baseurl }}" alt="pipi!"></div>
+		<div class="robot js-robot"><img src="{{ '/assets/images/robot.png' | prepend: site.baseurl }}" alt="ロボット"></div>
 	</div>
 </div>
 
