Fix the jaggies of skew in Chrome

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ layout: default
 </div>
 
 <div id="sponsors" class="sponsor-section">
+	<div class="skew-background"></div>
 	<div class="sponsor-section-inner">
 		<h1 class="section-title">
 			<span class="section-title-inner">
