Add links of sponsor & contact forms. Resolve #5 #7

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ layout: default
 				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 			</ul>
 		</div>
-		<a href="{{ site.sponsorurl }}" class="button button-large button-block become-a-sponsor">スポンサー申し込み</a>
+		<a href="{{ site.sponsorform_url }}" class="button button-large button-block become-a-sponsor" target="_blank">スポンサー申し込み</a>
 	</div>
 </div>
 
@@ -335,7 +335,7 @@ layout: default
 			<span class="ja">お問い合わせ</span>
 		</span>
 	</h1>
-	<a href="" class="button button-large button-blue button-block open-form">フォームを開く</a>
+	<a href="{{ site.contactform_url }}" class="button button-large button-blue button-block open-form" target="_blank">フォームを開く</a>
 </div>
 
 <div id="staff" class="staff-section">
