Add sponsorship PDF. Fix #10

--- a/index.html
+++ b/index.html
@@ -187,7 +187,11 @@ layout: default
 				<li><a href=""><img src="//placehold.it/600x600/fff/000?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 			</ul>
 		</div>
-		<a href="{{ site.sponsorform_url }}" class="button button-large button-block become-a-sponsor" target="_blank">スポンサー申し込み</a>
+		<p class="become-a-sponsor-outer">
+			<a href="{{ site.sponsorform_url }}" class="button button-large button-block become-a-sponsor" target="_blank">スポンサー申し込み</a>
+			<br>
+			<a href="{{ '/assets/pdf/sponsor.pdf' | prepend: site.baseurl }}" target="_blank">DojoCon Japan 2016 スポンサーシップのご案内 [PDF]</a>
+		</p>
 	</div>
 </div>
 
