--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ layout: default
 			</h1>
 			<div class="what-is-coderdojo">
 				<h2>CoderDojo って？</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus architecto voluptas pariatur, odit quae, deleniti totam.<br />
-					Dignissimos tenetur magnam culpa ad maiores, veniam possimus. Debitis animi modi quasi consequatur.</p>
+				<p>CoderDojoは2011年にアイルランドから始まった子供達にプログラミングを学ぶ場を提供するボランティア主導の世界的な非営利活動です。</p>
+				<p>Dojoの数は世界中で970（2016年5月段階）にも及びます。</p>
 				<p class="coderdojo-logo"><img src="{{ '/assets/images/coderdojo-logo.svg' | prepend: site.baseurl }}" alt="CoderDojo ロゴ"></p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et tempora quae maiores porro sed illo nobis pariatur eveniet necessitatibus dolorum. Excepturi illum quasi, voluptates odio! Fugit, laudantium ut magni hic!</p>
+				<p>日本の道場も現在36となり、徐々に増えつつありますが参加を希望する子供に対してメンター（サポートするボランティア）やDojoが常に不足しています。西宮、梅田で開催しているDojoでは毎回倍率が2倍以上になっています。そのような現状を解決する為に、私たちは今年8月日本で初めてのDojoConを開催します。</p>
 			</div>
 		</div>
 	</div>
@@ -45,20 +45,19 @@ layout: default
 				<figure><img src="{{ '/assets/images/what-is-dojocon-image.jpg' }}" alt="DojoCon のイメージ写真"></figure>
 				<div class="text">
 					<h2>DojoCon とは？</h2>
-					<p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem debitis provident rerum pariatur.</strong><br />
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est asperiores quidem officiis, harum nisi aperiam modi ut dolor doloribus fugiat, labore velit beatae rem laudantium praesentium deleniti sunt, voluptates eius.<br />
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum beatae dolores, sequi neque commodi officiis tempora eius dignissimos atque quisquam! Adipisci exercitationem, tenetur aut distinctio quis qui reiciendis impedit quibusdam.</p>
+					<p>DojoConはCoderDojoの主催者、メンターとプログラムを学ぶ子供たち、また活動に賛同・協賛する人が数百人集う大きなイベントです。</p>
 				</div>
 			</div>
 			<div class="first-dojocon-japan">
 				<h2>初開催の DojoCon Japan</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consequuntur, suscipit distinctio voluptas rerum eum.</p>
+				<p><strong>THE MORE DOJOS, THE MORE COOL CODERS</strong><br />をテーマに
+</p>
 				<ul>
-					<li><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong></li>
-					<li><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cumque dicta minima necessitatibus doloribus.</strong></li>
-					<li><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong></li>
+					<li><strong>国内でのCoderDojoに携わるメンターの交流</strong></li>
+					<li><strong>プログラム教育、コミュニティー運営、アートなどの各分野に関するエキサイティングなスピーカーを揃えたセッション</strong></li>
+					<li><strong>新しいテクノロジーやサービスに触れるショーケース</strong></li>
 				</ul>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus rem distinctio ducimus nobis, adipisci quos recusandae, facilis neque voluptates hic natus autem eos dicta, expedita ea reprehenderit quae esse iusto.</p>
+				<p>を中心に構成され、これから日本各地でCoderDojoが増え、それぞれがいっそう楽しく、より地域に根ざし、そしてクリエイティブなものになっていくことで次世代のテクノロジスト育成の促進を目指します。</p>
 			</div>
 		</div>
 	</div>
