Add TimeTable Text WorkShop DOJOCON-288

--- a/index.html
+++ b/index.html
@@ -275,25 +275,47 @@ layout: default
 			<div class="workshop-line">
 				<h2>Workshop Line</h2>
 				<ol class="workshops">
-					<li class="bg-light duration-90min break-5min">
-						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
-						<p class="time">[10:00-10:10]</p>
-						<p><a href="" class="button button-small button-blue">Entry</a></p>
+					<li class="bg-light duration-50min break-10min">
 					</li>
-					<li class="bg-dark duration-90min break-5min">
-						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
-						<p class="time">[10:00-10:10]</p>
-						<p><a href="" class="button button-small button-blue">Entry</a></p>
+					<li class="bg-light duration-50min break-10min">
+						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
+						<p class="time">[11:00-11:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-session-detail-trigger">大人のScratch教室</a></h3>
+						<p class="time">[11:00-11:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
-					<li class="bg-light duration-90min break-5min">
-						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
-						<p class="time">[10:00-10:10]</p>
-						<p><a href="" class="button button-small button-blue">Entry</a></p>
+					<li class="bg-light duration-50min break-10min">
+						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
+						<p class="time">[12:00-12:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-session-detail-trigger">大人のScratch教室</a></h3>
+						<p class="time">[12:00-12:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
-					<li class="bg-dark duration-90min">
-						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
-						<p class="time">[10:00-10:10]</p>
-						<p><a href="" class="button button-small button-blue">Entry</a></p>
+					<li class="bg-light duration-50min break-10min">
+						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
+						<p class="time">[13:00-13:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-session-detail-trigger">大人のScratch教室</a></h3>
+						<p class="time">[13:00-13:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+					</li>
+					<li class="bg-light duration-50min break-10min">
+						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
+						<p class="time">[14:00-14:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-session-detail-trigger">大人のScratch教室</a></h3>
+						<p class="time">[14:00-14:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+					</li>
+					<li class="bg-light duration-50min break-10min">
+						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
+						<p class="time">[15:00-15:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
+						<h3 class="workshop-title"><a href="#workshop-scratch" class="js-session-detail-trigger">大人のScratch教室</a></h3>
+						<p class="time">[15:00-15:50]</p>
+						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
 				</ol>
 			</div>
