--- a/index.html
+++ b/index.html
@@ -325,27 +325,38 @@ layout: default
 		<h2>Exhibition</h2>
 		<ul class="exhibitions">
 			<li>
-				<figure><img src="//placehold.it/600x360" alt="展示１のイメージ"></figure>
+				<figure><img src="//placehold.it/600x360" alt="Touch&amp;Try／BlocklyDuinoのイメージ"></figure>
 				<div class="description">
-					<h3 class="exhibition-title">展示１<br>
-						<small>[Area: A]</small></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae tenetur repellendus, consequatur harum, delectus nulla accusamus soluta dicta molestiae officia!</p>
+					<h3 class="exhibition-title">Touch&amp;Try／BlocklyDuino<!-- <br>
+						<small>[Area: A]</small> --></h3>
+					<p>BlocklyDuinoって何？何ができるの？<br>
+					Scratchのようにブロックを組み合わせるだけでArduino（マイコンボード）を制御できるBlocklyDuinoを使って、電子工作を体験しよう！</p>
 				</div>
 			</li>
 			<li>
-				<figure><img src="//placehold.it/600x360" alt="展示２のイメージ"></figure>
+				<figure><img src="//placehold.it/600x360" alt="CoderDojo相談カウンターのイメージ"></figure>
 				<div class="description">
-					<h3 class="exhibition-title">展示２<br>
-						<small>[Area: B]</small></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae tenetur repellendus, consequatur harum, delectus nulla accusamus soluta dicta molestiae officia!</p>
+					<h3 class="exhibition-title">CoderDojo相談カウンター<!-- <br>
+						<small>[Area: B]</small> --></h3>
+					<p>何でも相談してください！<br>
+					メンター：CoderDojoに参加したい方、CoderDojoを立ち上げたいと思っている方、お気軽にお立ち寄り下さい。<br>
+					忍者：プログラミング(Scratchなど)でつまずいていること、行き詰まっていることなど何でも相談してください。</p>
 				</div>
 			</li>
 			<li>
-				<figure><img src="//placehold.it/600x360" alt="展示３のイメージ"></figure>
+				<figure><img src="//placehold.it/600x360" alt="忍者ブースのイメージ"></figure>
 				<div class="description">
-					<h3 class="exhibition-title">展示３<br>
-						<small>[Area: C]</small></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae tenetur repellendus, consequatur harum, delectus nulla accusamus soluta dicta molestiae officia!</p>
+					<h3 class="exhibition-title">忍者ブース<!-- <br>
+						<small>[Area: C]</small> --></h3>
+					<p>CoderDojoに参加している子供たち（忍者）が作ったプログラムを展示しています。実際に作成した忍者も参加予定ですので、いろいろ質問してみてはいかがでしょうか？</p>
+				</div>
+			</li>
+			<li>
+				<figure><img src="//placehold.it/600x360" alt="パーラービーズのイメージ"></figure>
+				<div class="description">
+					<h3 class="exhibition-title">パーラービーズ<!-- <br>
+						<small>[Area: C]</small> --></h3>
+					<p>パーラービーズ（アイロンビーズ）を通じてドット絵の体験をしてみませんか？プログラミングとは無関係に見えますが、ゲームで動いているキャラクターの原点を知ることができますよ。</p>
 				</div>
 			</li>
 		</ul>
