--- a/index.html
+++ b/index.html
@@ -383,84 +383,128 @@ layout: default
 	</h1>
 	<ul class="members">
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="細谷崇のプロフィール画像"></figure>
+			<h2 class="member-name">細谷崇</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="若林健一のプロフィール画像"></figure>
+			<h2 class="member-name">若林健一</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="角田一平のプロフィール画像"></figure>
+			<h2 class="member-name">角田一平</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="酒井久伸のプロフィール画像"></figure>
+			<h2 class="member-name">酒井久伸</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="照井晶子のプロフィール画像"></figure>
+			<h2 class="member-name">照井晶子</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="大野由衣のプロフィール画像"></figure>
+			<h2 class="member-name">大野由衣</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="岡田裕行のプロフィール画像"></figure>
+			<h2 class="member-name">岡田裕行</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="寺園聖文のプロフィール画像"></figure>
+			<h2 class="member-name">寺園聖文</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="山本倫江のプロフィール画像"></figure>
+			<h2 class="member-name">山本倫江</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="永田明のプロフィール画像"></figure>
+			<h2 class="member-name">永田明</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="永富千春のプロフィール画像"></figure>
+			<h2 class="member-name">永富千春</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="高坂智美のプロフィール画像"></figure>
+			<h2 class="member-name">高坂智美</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="Kel Santiago-Pilarskiのプロフィール画像"></figure>
+			<h2 class="member-name">Kel Santiago-Pilarski</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="斉田真也のプロフィール画像"></figure>
+			<h2 class="member-name">斉田真也</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="浅賀功次のプロフィール画像"></figure>
+			<h2 class="member-name">浅賀功次</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="近岡真由美のプロフィール画像"></figure>
+			<h2 class="member-name">近岡真由美</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="根津将之のプロフィール画像"></figure>
+			<h2 class="member-name">根津将之</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="須磨信幸のプロフィール画像"></figure>
+			<h2 class="member-name">須磨信幸</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="土居安佳里のプロフィール画像"></figure>
+			<h2 class="member-name">土居安佳里</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="member-name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="カイトのプロフィール画像"></figure>
+			<h2 class="member-name">カイト</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="井上一のプロフィール画像"></figure>
+			<h2 class="member-name">井上一</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="小寺順子のプロフィール画像"></figure>
+			<h2 class="member-name">小寺順子</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="杉山敦のプロフィール画像"></figure>
+			<h2 class="member-name">杉山敦</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="池上緑のプロフィール画像"></figure>
+			<h2 class="member-name">池上緑</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="山下浩平のプロフィール画像"></figure>
+			<h2 class="member-name">山下浩平</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="田重田勝一郎のプロフィール画像"></figure>
+			<h2 class="member-name">田重田勝一郎</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="川端善行のプロフィール画像"></figure>
+			<h2 class="member-name">川端善行</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="森巧尚のプロフィール画像"></figure>
+			<h2 class="member-name">森巧尚</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="安川要平のプロフィール画像"></figure>
+			<h2 class="member-name">安川要平</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="とがぞののプロフィール画像"></figure>
+			<h2 class="member-name">とがぞの</h2>
+		</li>
+		<li>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="柴田重臣のプロフィール画像"></figure>
+			<h2 class="member-name">柴田重臣</h2>
 		</li>
 	</ul>
 </div>
