Add TimeTable session Text DOJOCON-286

--- a/index.html
+++ b/index.html
@@ -215,49 +215,67 @@ layout: default
 			<div class="session-line">
 				<h2>Session Line</h2>
 				<ol class="sessions">
+					<li class="duration-30min">
+					</li>
 					<li class="bg-light duration-10min">
-						<h3 class="session-title"><a href="#opening-ceremony" class="js-session-detail-trigger">オープニングセレモニー</a></h3>
-						<p class="time">[10:00-10:10]</p>
+						<h3 class="session-title"><!-- <a href="#about-coder-dojo" class="js-session-detail-trigger"> -->CoderDojoとは<span class="speaker"> / 細谷 崇</span><!-- </a> --></h3>
+						<p class="time">[10:30-10:40]</p>
 					</li>
 					<li class="bg-dark duration-40min break-5min">
-						<h3 class="session-title"><a href="#keynote" class="js-session-detail-trigger">基調講演<span class="speaker"> / 阿部和広</span></a></h3>
-						<p class="time">[10:10-10:50]</p>
+						<h3 class="session-title"><a href="#keynote" class="js-session-detail-trigger">基調講演<span class="speaker"> / 阿部 和広</span></a></h3>
+						<p class="time">[10:40-11:20]</p>
 					</li>
-					<li class="bg-light duration-40min break-5min">
-						<h3 class="session-title"><a href="#blocklyduino" class="js-session-detail-trigger">子供でもArduinoを操作できるBlocklyDuinoの紹介</a></h3>
-						<p class="time">[10:55-11:35]</p>
+					<li class="bg-light duration-20min">
+						<h3 class="session-title"><!-- <a href="#student-champions" class="js-session-detail-trigger"> -->学生の道場運営者に聞く！<span class="speaker"> / 宮島 衣瑛, 東 和樹</span><!-- </a> --></h3>
+						<p class="time">[11:25-11:45]</p>
 					</li>
-					<li class="bg-dark duration-40min">
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time">[10:55-11:35]</p>
-					</li>
-					<li class="duration-40min">
-						<h3 class="session-title"><a href="">お昼休憩</a></h3>
-						<p class="time">[12:20-13:00]</p>
-					</li>
-					<li class="bg-light duration-25min">
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time">[10:00-10:10]</p>
-					</li>
-					<li class="bg-dark duration-15min">
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time">[10:00-10:10]</p>
+					<li class="bg-dark duration-20min break-5min">
+						<h3 class="session-title"><!-- <a href="#blocklyduino" class="js-session-detail-trigger"> -->子供でもArduinoを操作できるBlocklyDuinoの紹介<span class="speaker"> / 岡田 裕行</span><!-- </a> --></h3>
+						<p class="time">[11:45-12:05]</p>
 					</li>
 					<li class="bg-light duration-15min">
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time">[10:00-10:10]</p>
+						<h3 class="session-title">Coming soon ...</h3>
+						<!-- <p class="time">[12:10-12:25]</p> -->
 					</li>
-					<li class="bg-dark duration-25min">
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time">[10:00-10:10]</p>
+					<li class="bg-dark duration-20min break-5min">
+						<h3 class="session-title">Coming soon ...</h3>
+						<!-- <p class="time">[12:25-12:45]</p> -->
 					</li>
-					<li class="bg-light duration-30min">
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time">[10:00-10:10]</p>
+					<li class="bg-light duration-15min">
+						<h3 class="session-title">Coming soon ...</h3>
+						<!-- <p class="time">[12:50-13:05]</p> -->
 					</li>
-					<li class="bg-dark duration-15min">
-						<h3 class="session-title"><a href="">スポンサー</a></h3>
-						<p class="time">[14:50-15:05]</p>
+					<li class="bg-dark duration-20min break-5min">
+						<h3 class="session-title"><!-- <a href="#coderdojo-minecraft" class="js-session-detail-trigger"> -->CoderDojoでMinecraftに触れる理由<span class="speaker"> / 寺園 聖文</span><!-- </a> --></h3>
+						<p class="time">[13:05-13:25]</p>
+					</li>
+					<li class="bg-light duration-15min">
+						<h3 class="session-title">Coming soon ...</h3>
+						<!-- <p class="time">[13:30-13:45]</p> -->
+					</li>
+					<li class="bg-dark duration-20min break-5min">
+						<h3 class="session-title"><!-- <a href="#coderdojo-kodaira" class="js-session-detail-trigger"> -->CoderDojo小平の活動内容<span class="speaker"> / とがぞの</span><!-- </a> --></h3>
+						<p class="time">[13:45-14:05]</p>
+					</li>
+					<li class="bg-light duration-15min">
+						<h3 class="session-title">Coming soon ...</h3>
+						<!-- <p class="time">[14:10-14:35]</p> -->
+					</li>
+					<li class="bg-dark duration-20min break-5min">
+						<h3 class="session-title">Coming soon ...</h3>
+						<!-- <p class="time">[14:35-14:55]</p> -->
+					</li>
+					<li class="bg-light duration-40min">
+						<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-session-detail-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる<span class="speaker"> / ロス・オニール<!-- </a> --></h3>
+						<p class="time">[15:00-15:40]</p>
+					</li>
+					<li class="bg-dark duration-40min break-10min">
+						<h3 class="session-title"><a href="#champion-panel-discussion" class="js-session-detail-trigger">チャンピオンパネルディスカッション<span class="speaker"> / 細谷 崇, 宮島 衣瑛, とがぞの</span></a></h3>
+						<p class="time">[15:40-16:20]</p>
+					</li>
+					<li class="bg-dark duration-10min">
+						<h3 class="session-title">閉会のことば</h3>
+						<p class="time">[16:20-16:30]</p>
 					</li>
 				</ol>
 			</div>
@@ -275,7 +293,7 @@ layout: default
 			<div class="workshop-line">
 				<h2>Workshop Line</h2>
 				<ol class="workshops">
-					<li class="bg-light duration-50min break-10min">
+					<li class="duration-50min break-10min">
 					</li>
 					<li class="bg-light duration-50min break-10min">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
@@ -285,7 +303,7 @@ layout: default
 						<p class="time">[11:00-11:50]</p>
 						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
-					<li class="bg-light duration-50min break-10min">
+					<li class="bg-dark duration-50min break-10min">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
 						<p class="time">[12:00-12:50]</p>
 						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
@@ -301,7 +319,7 @@ layout: default
 						<p class="time">[13:00-13:50]</p>
 						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
 					</li>
-					<li class="bg-light duration-50min break-10min">
+					<li class="bg-dark duration-50min break-10min">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
 						<p class="time">[14:00-14:50]</p>
 						<!-- <p><a href="" class="button button-small button-blue">Entry</a></p> -->
